--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
     "react-flip-move": "^2.2.0",
+    "react-router": "^2.4.0",
     "react-tap-event-plugin": "^1.0.0",
     "underscore": "^1.8.3"
   }
