--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   },
   "dependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "cookies-js": "^1.2.2",
     "core-js": "^2.0.0",
     "material-ui": "^0.15.0",
     "normalize.css": "^4.0.0",
