--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "css-loader": "^0.23.0",
     "eslint": "^2.2.0",
     "eslint-loader": "^1.0.0",
-    "eslint-plugin-react": "^5.0.0",
+    "eslint-plugin-react": "^6.7.1",
     "file-loader": "^0.8.4",
     "glob": "^7.0.0",
     "isparta-instrumenter-loader": "^1.0.0",
@@ -68,6 +68,7 @@
     "normalize.css": "^4.0.0",
     "re-base": "^1.5.1",
     "react": "^15.0.0",
+    "react-custom-scrollbars": "^4.0.0",
     "react-dom": "^15.0.0",
     "react-flip-move": "^2.2.0",
     "react-router": "^2.4.0",
