--- a/package.json
+++ b/package.json
@@ -71,8 +71,11 @@
     "react-custom-scrollbars": "^4.0.0",
     "react-dom": "^15.0.0",
     "react-flip-move": "^2.2.0",
+    "react-redux": "^5.0.2",
     "react-router": "^2.4.0",
     "react-tap-event-plugin": "^1.0.0",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "underscore": "^1.8.3"
   }
 }
