--- a/package.json
+++ b/package.json
@@ -64,16 +64,17 @@
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "cookies-js": "^1.2.2",
     "core-js": "^2.0.0",
-    "material-ui": "^0.15.3",
+    "material-ui": "^0.16.4",
     "normalize.css": "^4.0.0",
     "re-base": "^1.5.1",
-    "react": "^15.0.0",
+    "react": "^15.4.1",
     "react-custom-scrollbars": "^4.0.0",
-    "react-dom": "^15.0.0",
+    "react-dom": "^15.4.1",
     "react-flip-move": "^2.2.0",
     "react-redux": "^5.0.2",
     "react-router": "^2.4.0",
-    "react-tap-event-plugin": "^1.0.0",
+    "react-router-redux": "^4.0.7",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "underscore": "^1.8.3"
